[package]
name = "cuda-config"
version = "0.1.0"
edition = "2021"
description = "Layered config with validation, auto-secret detection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-config"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
